<resources>
    <string name="app_name">House Suche</string>
    <string name="skip">Skip</string>
    <string name="next">Nächste</string>
    <string name="start">Start</string>
    <string name="tso">Die besten Unterkünfte für jede Reise finden – leichter als gedacht!</string>
    <string name="dso">Reisen kann aufregend, aber auch herausfordernd sein. Ob günstige Mietwohnungen, charmante Pensionen oder Hotels – wir helfen Reisenden, die perfekte Unterkunft für jede Reise zu finden.</string>
    <string name="tst">Mit unserer App: Einfach and schnell buchen!</string>
    <string name="dst">Reiseplanung kann herausfordernd sein: Von günstigen Mietwohnungen bis zu Hotels kämpfen viele Reisende mit der Auswahl der besten Optionen.</string>
    <string name="tsth">Finde jetzt dein Traumziel – einfacher, schneller, perfekter!</string>
    <string name="dsth">Melde dich in nur wenigen Minuten an und entdecke erweiterte Suchtools, personalisierte Empfehlungen und exklusive Reisetipps. Mach jede Reise unvergesslich mit den perfekten Aufenthalten.</string>
    <string name="register">Sign In</string>
    <string name="login">Log In</string>
    <string name="account_how">Haben Sie ein Konto?</string>
    <string name="more">Mehr</string>
    <string name="email">Email</string>
    <string name="password">Passwort</string>
    <string name="forgot_password">Passwort vergessen?</string>
    <string name="registerTxt">Registrieren</string>
    <string name="signup">Sign Up</string>
    <string name="sendEmail">Send Email</string>
    <string name="reset_pass">Reset Password</string>
    <string name="default_web_client_id"> 252004326987-lu3n10memo0r6bnmkanclnspnjh0siqu.apps.googleusercontent.com</string>
    <string name="username">Benutzername</string>
    <string name="name">Name</string>
    <string name="location">Standort</string>
    <string name="location_address">Munchen , Deutschland</string>
    <string name="recommended_property">Empfohlene Unterkunft</string>
    <string name="searching">suchen..</string>
    <string name="nearby_properties">Nahe gelegenen Immobilien</string>
    <string name="new_properties">Neueste Immobilien</string>
    <string name="Hose">Hause</string>
    <string name="name_hose">königliche Wohnung</string>
    <string name="location_items">Marienplatz 8,München</string>
    <string name="title_dialog">Auswahl der Adressregistrierung</string>
    <string name="message_dialog">Bitte wählen Sie aus, ob die Adresse automatisch erfasst oder manuell eingegeben werden soll.</string>
    <string name="option_text_one">Adresse automatisch erfassen</string>
    <string name="option_text_two">Adresse manuell eingeben</string>
    <string name="search_country">Finde dein Land.....</string>
    <string name="search_city">Finde deine Stadt</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="facilities">Einrichtungen</string>
    <string name="description">Beschreibung</string>
    <string name="description_text">Helle und gut geschnittene Wohnung mit Balkon Einbauküche und Aufzug. Zentrale Lage , nur wenige</string>
    <string name="name_owner">Hammed Ghadirian</string>
    <string name="request">Termin anfragen</string>
    <string name="bed_roome">Bedroome</string>
    <string name="number">140,000,000</string>
    <string name="set">Satz</string>
    <string name="date">Datum</string>
    <string name="text_date">Ich interessiere mich für diese Wohnung und würde gerne einen Besichtigungstermin vereinbaren sowie Details zur Miete und den Vertragsbedingungen erhalten.</string>
    <string name="phone">Telefonnummer:</string>
    <string name="sms">SMS:</string>
    <string name="phoneNumber">Telefonnummer</string>
    <string name="set_date">Ihr Datum festgelegt</string>
    <string name="optional_documents">Optionale Dokumente</string>
    <string name="more_info">Weitere Informationen</string>
    <string name="idCard">Personalausweis / Reisepass</string>
    <string name="arbeitsvertrag">Einkommensnachweis</string>
    <string name="schufa">SCHUFA</string>
    <string name="birthday">Geburtstag</string>
    <string name="job">Arbeit</string>
    <string name="pet">Haustier</string>
    <string name="single">Single</string>
    <string name="childeren">Kinder</string>
    <string name="basic_info">Basisinformationen</string>
    <string name="marriage">Hochzeit:</string>
    <string name="user_activity">Benutzeraktivität</string>
    <string name="recently">Kürzlich</string>
    <string name="birthday_time">Geburtsdatum</string>
    <string name="marriage_text">Hochzeit</string>
    <string name="download">Zum Herunterladen klicken</string>
    <string name="message_text">Nachricht</string>
    <string name="title_best">Wow! Vielen Dank!</string>
    <string name="description_best">Wir freuen uns, dass Ihnen unsere Wohnungsanzeigen gefallen. Ihre Bewertung hilft uns, noch bessere Angebote zu zeigen.</string>
    <string name="title_normal">Vielen Dank für Ihr Feedback</string>
    <string name="description_normal">Wir arbeiten ständig daran, unsere Anzeigen zu verbessern und die Wohnungssuche für Sie einfacher zu machen.</string>
    <string name="title_bad">Es tut uns leid</string>
    <string name="description_bad">Ihre Erfahrung war nicht ideal? Teilen Sie uns bitte mit, was wir verbessern können, damit die Wohnungssuche besser wird.</string>
    <string name="submit">Einreichen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="helper_text">Helferin</string>
    <string name="ower_helper">Überblick</string>
    <string name="manage_interests">Interessen verwalten</string>
    <string name="ower_des_helper">Diese Seite ist in drei Hauptbereiche unterteilt. Jeder Bereich hat einen eigenen Titel und erklärt seinen Inhalt, damit Benutzer schnell den Zweck jedes Teils verstehen können.</string>
    <string name="del_op_text">Dringende Elemente entfernen</string>
    <string name="del_op_text_o">Dringende Elemente können auf zwei Arten entfernt werden:</string>
    <string name="del_op_text_t">1. Durch Klicken auf das Lesezeichen-Symbol direkt im Hauptlistenelement.</string>
    <string name="del_op_text_th">2. Durch Aufrufen der Detailseite des Elements und Klicken auf das Lesezeichen-Symbol dort.</string>
    <string name="del_op_text_f">So können Benutzer ihre dringenden Elemente effizient verwalten.</string>
    <string name="del_op_text_op_o">* Favoriten über Lesezeichen-Symbol entfernen</string>
    <string name="del_op_text_how_des">Benutzer können Elemente direkt aus den Favoriten entfernen, indem sie auf das Lesezeichen-Symbol eines beliebigen Elements in der Liste tippen. Dies bietet eine schnelle und intuitive Möglichkeit, ihre Favoriten zu verwalten, ohne tiefer navigieren zu müssen.</string>
    <string name="del_op_text_op_t">* Favoriten in der Detailansicht entfernen</string>
    <string name="del_op_text_op_t_des">Favoriten können auch auf der Detailseite des Elements entfernt werden, indem das Lesezeichen-Symbol dort angeklickt wird. So können Benutzer Favoriten verwalten, während sie detaillierte Informationen überprüfen.</string>
</resources>