<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/backs">
    <TextView
        android:id="@+id/title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"
        android:textSize="60sp"
        android:textAlignment="center"
        android:textDirection="ltr"
        android:textColor="@color/text_main_color"
        android:textFontWeight="900"
        android:fontFamily="@font/register_font"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_register">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_signUp"
            android:layout_width="250dp"
            android:textSize="18sp"
            android:hint="@string/email"
            android:textColorHint="@color/gray"
            android:textFontWeight="600"
            android:drawableStart="@drawable/at"
            android:drawableTint="@color/gray"
            android:fontFamily="@font/input_font"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:drawablePadding="10dp"
            android:paddingStart="15dp"
            android:background="@drawable/input_defult_bg"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/pass_signUp"
            android:layout_width="250dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            android:textFontWeight="600"
            android:fontFamily="@font/input_font"
            android:drawableStart="@drawable/password"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:drawableTint="@color/gray"
            android:drawablePadding="10dp"
            android:background="@drawable/input_defult_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_signUp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/forgotTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pass_signUp"
            android:textColor="@color/white"
            android:fontFamily="@font/input_font"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textAlignment="textStart"/>
        <TextView
            android:id="@+id/forgotBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Klicken Sie hier"
           app:layout_constraintStart_toEndOf="@id/forgotTxt"
            app:layout_constraintTop_toTopOf="@id/forgotTxt"
            app:layout_constraintBottom_toBottomOf="@id/forgotTxt"
            android:layout_marginStart="20dp"
            android:textColor="@color/light_green"
            android:fontFamily="@font/splash_tittle"
            android:textSize="18sp"
            android:textAlignment="textStart"/>
           <ImageView
            android:id="@+id/lineView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/line"
            android:layout_marginTop="-15dp"
            app:layout_constraintStart_toStartOf="@id/pass_signUp"
            app:layout_constraintEnd_toEndOf="@id/pass_signUp"
            app:layout_constraintTop_toBottomOf="@id/forgotTxt"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/btns"
            android:layout_marginTop="90dp"
            app:layout_constraintTop_toBottomOf="@id/pass_signUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>