<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HelperFragment"
    android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_back">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/back_helper_page"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="45dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/btns">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/helper_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_helper_page"
            android:text="@string/helper_text"
            android:textSize="23sp"
            android:textColor="@color/dark_red"
            android:textFontWeight="700"
            android:textAlignment="center"
            android:fontFamily="@font/title_slid_font"
            android:layout_marginTop="10dp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="30dp"
            app:layout_constraintTop_toBottomOf="@id/helper_text"
            android:paddingBottom="200dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="400dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/owerViewBtn_helper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="50dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/helper_text">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/arrow_right"
                            android:id="@+id/arrowIcon"/>
                        <TextView
                            app:layout_constraintTop_toTopOf="@id/arrowIcon"
                            android:layout_marginStart="10dp"
                            app:layout_constraintBottom_toBottomOf="@id/arrowIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ower_helper"
                            app:layout_constraintStart_toEndOf="@id/arrowIcon"
                            android:textFontWeight="800"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:fontFamily="@font/title_cat_ex"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:visibility="gone"
                        android:id="@+id/owerViewLayout_helper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/owerViewBtn_helper"
                        android:layout_marginTop="20dp">
                        <TextView
                            android:layout_width="350dp"
                            android:layout_height="wrap_content"
                            android:text="@string/ower_des_helper"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:textFontWeight="700"
                            android:fontFamily="@font/account_ans_font"
                            android:textAlignment="textStart"
                            android:textDirection="ltr"
                            android:justificationMode="inter_word"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/owerDeleteOption_helper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/owerViewLayout_helper">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/arrow_right"
                            android:id="@+id/deleteIconH"/>
                        <TextView
                            app:layout_constraintTop_toTopOf="@id/deleteIconH"
                            android:layout_marginStart="10dp"
                            app:layout_constraintBottom_toBottomOf="@id/deleteIconH"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/del_op_text"
                            app:layout_constraintStart_toEndOf="@id/deleteIconH"
                            android:textFontWeight="800"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:fontFamily="@font/title_cat_ex"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:visibility="gone"
                        android:id="@+id/owerDLayout_helper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/owerDeleteOption_helper"
                        android:layout_marginTop="20dp">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="350dp"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/o"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:textColor="@color/black"
                                android:textFontWeight="700"
                                android:fontFamily="@font/account_ans_font"
                                android:textAlignment="textStart"
                                android:textDirection="ltr"
                                android:justificationMode="inter_word"
                                android:text="@string/del_op_text_o"/>
                            <TextView
                                android:id="@+id/t"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:textColor="@color/dark_red"
                                android:textFontWeight="700"
                                android:fontFamily="@font/account_ans_font"
                                android:textAlignment="textStart"
                                android:textDirection="ltr"
                                app:layout_constraintStart_toStartOf="@id/o"
                                app:layout_constraintTop_toBottomOf="@id/o"
                                android:justificationMode="inter_word"
                                android:text="@string/del_op_text_t"/>
                            <TextView
                                android:id="@+id/th"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:textColor="@color/dark_red"
                                android:textFontWeight="700"
                                android:fontFamily="@font/account_ans_font"
                                android:textAlignment="textStart"
                                android:textDirection="ltr"
                                app:layout_constraintStart_toStartOf="@id/t"
                                app:layout_constraintTop_toBottomOf="@id/t"
                                android:justificationMode="inter_word"
                                android:text="@string/del_op_text_th"/>
                            <TextView
                                android:id="@+id/f"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:textColor="@color/black"
                                android:textFontWeight="700"
                                android:fontFamily="@font/account_ans_font"
                                android:textAlignment="textStart"
                                android:textDirection="ltr"
                                app:layout_constraintStart_toStartOf="@id/th"
                                app:layout_constraintTop_toBottomOf="@id/th"
                                android:justificationMode="inter_word"
                                android:text="@string/del_op_text_f"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/owerHDeleteOption_helper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/owerDLayout_helper">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/arrow_right"
                            android:id="@+id/deleteIconHo"/>
                        <TextView
                            app:layout_constraintTop_toTopOf="@id/deleteIconHo"
                            android:layout_marginStart="10dp"
                            app:layout_constraintBottom_toBottomOf="@id/deleteIconHo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/manage_interests"
                            app:layout_constraintStart_toEndOf="@id/deleteIconHo"
                            android:textFontWeight="800"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:fontFamily="@font/title_cat_ex"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/owerHDeleteOptionLayout_helper"
                        android:visibility="gone"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/owerHDeleteOption_helper"
                        android:layout_marginTop="20dp">
                        <TextView
                            android:id="@+id/txx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/dark_red"
                            android:textFontWeight="700"
                            android:fontFamily="@font/account_ans_font"
                            android:textAlignment="textStart"
                            android:textDirection="ltr"
                            app:layout_constraintStart_toStartOf="@id/o"
                            app:layout_constraintTop_toBottomOf="@id/o"
                            android:justificationMode="inter_word"
                            android:text="@string/del_op_text_op_o"/>
                        <TextView
                            android:id="@+id/tx"
                            android:layout_width="350dp"
                            android:layout_height="wrap_content"
                            android:text="@string/del_op_text_how_des"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:textFontWeight="700"
                            android:fontFamily="@font/account_ans_font"
                            android:textAlignment="textStart"
                            android:textDirection="ltr"
                            android:justificationMode="inter_word"
                            app:layout_constraintTop_toBottomOf="@id/txx"/>
                        <TextView
                            android:id="@+id/txxx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/dark_red"
                            android:textFontWeight="700"
                            android:fontFamily="@font/account_ans_font"
                            android:textAlignment="textStart"
                            android:textDirection="ltr"
                            app:layout_constraintStart_toStartOf="@id/txx"
                            app:layout_constraintTop_toBottomOf="@id/tx"
                            android:justificationMode="inter_word"
                            android:text="@string/del_op_text_op_t"/>
                        <TextView
                            android:id="@+id/txxxx"
                            android:layout_width="350dp"
                            android:layout_height="wrap_content"
                            android:text="@string/del_op_text_op_t_des"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:textFontWeight="700"
                            android:fontFamily="@font/account_ans_font"
                            android:textAlignment="textStart"
                            android:textDirection="ltr"
                            android:justificationMode="inter_word"
                            app:layout_constraintTop_toBottomOf="@id/txxx"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>




</FrameLayout>