<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassActivity"
    android:background="@drawable/backs">
    <TextView
        android:id="@+id/title_register"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textDirection="ltr"
        android:textColor="@color/text_main_color"
        android:textFontWeight="900"
        android:fontFamily="@font/register_font"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_forgot"
            android:layout_width="250dp"
            android:textSize="18sp"
            android:hint="@string/email"
            android:textColorHint="@color/gray"
            android:textFontWeight="600"
            android:drawableStart="@drawable/at"
            android:drawableTint="@color/gray"
            android:fontFamily="@font/input_font"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:drawablePadding="10dp"
            android:paddingStart="15dp"
            android:background="@drawable/input_defult_bg"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:id="@+id/lineView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/line"
            android:layout_marginTop="-10dp"
            app:layout_constraintStart_toStartOf="@id/email_forgot"
            app:layout_constraintEnd_toEndOf="@id/email_forgot"
            app:layout_constraintTop_toBottomOf="@id/email_forgot"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forgotBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sendEmail"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/btns"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@id/email_forgot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>